fix: harden candidate job matching correctness